Royale Velour Canada 150  - 3 sizes - 2 versions - a remain size is waiting for psd

--- a/2017/2017-04/2017-04-22/source/en/320x50_en.css
+++ b/2017/2017-04/2017-04-22/source/en/320x50_en.css
@@ -209,86 +209,6 @@
   }
 }
 
-/*-- slide left right --*/
-@-webkit-keyframes slideLeftRight {
-  0%   {
-    -webkit-transform: translate(0, 0);
-  }
-  6.25%, 18.75% { 
-    -webkit-transform: translate(-190px, 0);
-  }
-  25%, 31.25%   {
-    -webkit-transform: translate(0, 0);
-  }
-  37.5%, 50% { 
-    -webkit-transform: translate(-190px, 0);
-  }
-  56.25%, 62.5%   {
-    -webkit-transform: translate(0, 0);
-  }
-  68.75%, 81.25% { 
-    -webkit-transform: translate(-190px, 0);
-  }
-  87.5%, 93.75%   {
-    -webkit-transform: translate(0, 0);
-  }
-  100% { 
-    -webkit-transform: translate(-190px, 0);
-  }
-}
-@-moz-keyframes slideLeftRight {
-  0%   {
-    -moz-transform: translate(0, 0);
-  }
-  6.25%, 18.75% { 
-    -moz-transform: translate(-190px, 0);
-  }
-  25%, 31.25%   {
-    -moz-transform: translate(0, 0);
-  }
-  37.5%, 50% { 
-    -moz-transform: translate(-190px, 0);
-  }
-  56.25%, 62.5%   {
-    -moz-transform: translate(0, 0);
-  }
-  68.75%, 81.25% { 
-    -moz-transform: translate(-190px, 0);
-  }
-  87.5%, 93.75%   {
-    -moz-transform: translate(0, 0);
-  }
-  100% { 
-    -moz-transform: translate(-190px, 0);
-  }
-}
-@keyframes slideLeftRight {
-  0%   {
-    transform: translate(0, 0);
-  }
-  6.25%, 18.75% { 
-    transform: translate(-190px, 0);
-  }
-  25%, 31.25%   {
-    transform: translate(0, 0);
-  }
-  37.5%, 50% { 
-    transform: translate(-190px, 0);
-  }
-  56.25%, 62.5%   {
-    transform: translate(0, 0);
-  }
-  68.75%, 81.25% { 
-    transform: translate(-190px, 0);
-  }
-  87.5%, 93.75%   {
-    transform: translate(0, 0);
-  }
-  100% { 
-    transform: translate(-190px, 0);
-  }
-}
-
 
 /*-------------------------------------------*/
 * {
@@ -305,8 +225,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 600px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -331,9 +251,9 @@
 }
 .content{
   background-color: #ffffff;
-  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
-  animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   border: 1px solid #000000;
   overflow: hidden;
 }
@@ -343,70 +263,13 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 
-.closet0 {
-  background: url('./images/300x600_en_closet0.jpg') no-repeat center center;
-  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-  animation: hideContent 10ms ease-in-out 0s forwards;
-}
-.closet1 {
-  background: url('./images/300x600_en_closet1.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.1s ease-in-out 1.25s forwards;
-  -moz-animation: fadeIn 0.1s ease-in-out 1.25s forwards;
-  animation: fadeIn 0.1s ease-in-out 1.25s forwards;
-}
-.closet2 {
-  background: url('./images/300x600_en_closet2.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.1s ease-in-out 3.75s forwards;
-  -moz-animation: fadeIn 0.1s ease-in-out 3.75s forwards;
-  animation: fadeIn 0.1s ease-in-out 3.75s forwards;
-}
-.closet3 {
-  background: url('./images/300x600_en_closet3.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.1s ease-in-out 6.25s forwards;
-  -moz-animation: fadeIn 0.1s ease-in-out 6.25s forwards;
-  animation: fadeIn 0.1s ease-in-out 6.25s forwards;
-}
-.closet4 {
-  background: url('./images/300x600_en_closet4.jpg') no-repeat center center;
-  -webkit-animation: fadeIn 0.1s ease-in-out 8.75s forwards;
-  -moz-animation: fadeIn 0.1s ease-in-out 8.75s forwards;
-  animation: fadeIn 0.1s ease-in-out 8.75s forwards;
-}
-.door-down-container {
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-}
-.door-down {
-  background: url('./images/300x600_en_door_down.png') no-repeat center center;
-  width: 211px;
-  height: 561px;
-  top: 0px;
-  left: 163px;
-  -webkit-animation: slideLeftRight 8s ease-in-out 1.75s forwards;
-  -moz-animation: slideLeftRight 8s ease-in-out 1.75s forwards;
-  animation: slideLeftRight 8s ease-in-out 1.75s forwards;
-}
-.door-up {
-  background: url('./images/300x600_en_door_up.png') no-repeat center center;
-  width: 175px;
-  height: 561px;
-  top: 0px;
-  left: 0px;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-}
-
 .logo {
-  background: url('./images/300x600_en_logo.png') no-repeat center center;
-  width: 140px;
-  height: 35px;
-  top: 174px;
-  left: 20px;
-  z-index: 5;
+  background: url('./images/320x50_en_logo.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 36px;
+  height: 22px;
+  top: 13px;
+  left: 11px;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -414,25 +277,62 @@
 }
 
 .text {
-  background: url('./images/300x600_en_text.png') no-repeat center center;
-  width: 99px;
-  height: 158px;
-  top: 229px;
-  left: 20px;
-  z-index: 5;
+  background: url('./images/320x50_en_text.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 163px;
+  height: 36px;
+  top: 7px;
+  left: 72px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
+  animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
 }
 .cta {
-  background: url('./images/300x600_en_cta.png') no-repeat center center;
-  width: 300px;
-  height: 40px;
-  left: 0px;
-  bottom: 0px;
-  z-index: 5;
-  
+  background: url('./images/320x50_en_cta.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 73px;
+  height: 20px;
+  right: 6px;
+  bottom: 15px;
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  animation: fadeInUp 0.75s ease-in-out 3s forwards;
+}
+
+.image1 {
+  background: url('./images/320x50_en_image1.jpg') no-repeat center center;
+  background-size: 100% auto;
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.image2 {
+  background: url('./images/320x50_en_image2.jpg') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+}
+.image3 {
+  background: url('./images/320x50_en_image3.jpg') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeIn 0.75s ease-in-out 6s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 6s forwards;
+  animation: fadeIn 0.75s ease-in-out 6s forwards;
+}
+.image4 {
+  background: url('./images/320x50_en_image4.jpg') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+}
+.image5 {
+  background: url('./images/320x50_en_image5.jpg') no-repeat center center;
+  background-size: 100% auto;
+  -webkit-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+}
