--- a/2017/2017-04/2017-04-22/source/en/300x250_en.css
+++ b/2017/2017-04/2017-04-22/source/en/300x250_en.css
@@ -251,9 +251,9 @@
 }
 .content{
   background-color: #ffffff;
-  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
-  animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   border: 1px solid #000000;
   overflow: hidden;
 }
@@ -263,43 +263,69 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 
-.background {
-  background: url('./images/300x250_en_bg.jpg') no-repeat center center;
-  -webkit-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-}
-
 .logo {
   background: url('./images/300x250_en_logo.png') no-repeat center center;
-  width: 120px;
-  height: 30px;
-  top: 20px;
-  left: 20px;
+  width: 67px;
+  height: 42px;
+  top: 11px;
+  right: 20px;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
 .text {
   background: url('./images/300x250_en_text.png') no-repeat center center;
-  width: 77px;
-  height: 123px;
-  top: 68px;
-  left: 20px;
+  width: 174px;
+  height: 109px;
+  top: 64px;
+  left: 65px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
+  animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
 }
 .cta {
   background: url('./images/300x250_en_cta.png') no-repeat center center;
-  width: 300px;
-  height: 40px;
-  left: 0px;
-  bottom: 0px;
+  width: 145px;
+  height: 39px;
+  left: 78px;
+  bottom: 4px;
 
-  -webkit-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  animation: fadeInUp 0.75s ease-in-out 3s forwards;
+}
+
+.image1 {
+  background: url('./images/300x250_en_image1.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.image2 {
+  background: url('./images/300x250_en_image2.jpg') no-repeat center center;
+
+  -webkit-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 4.25s forwards;
+}
+.image3 {
+  background: url('./images/300x250_en_image3.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 6s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 6s forwards;
+  animation: fadeIn 0.75s ease-in-out 6s forwards;
+}
+.image4 {
+  background: url('./images/300x250_en_image4.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 7.75s forwards;
+}
+.image5 {
+  background: url('./images/300x250_en_image5.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 9.5s forwards;
+}
