--- a/2017/2017-04/2017-04-22/source/fr/160x600_fr.css
+++ b/2017/2017-04/2017-04-22/source/fr/160x600_fr.css
@@ -264,7 +264,7 @@
 }
 
 .logo {
-  background: url('./images/160x600_en_logo.png') no-repeat center center;
+  background: url('./images/160x600_fr_logo.png') no-repeat center center;
   width: 76px;
   height: 47px;
   top: 20px;
@@ -276,22 +276,22 @@
 }
 
 .text {
-  background: url('./images/160x600_en_text.png') no-repeat center center;
-  width: 154px;
-  height: 97px;
-  top: 316px;
-  left: 3px;
+  background: url('./images/160x600_fr_text.png') no-repeat center center;
+  width: 149px;
+  height: 85px;
+  top: 323px;
+  left: 6px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
   animation: fadeInDown 0.75s ease-in-out 1.75s forwards;
 }
 .cta {
-  background: url('./images/160x600_en_cta.png') no-repeat center center;
-  width: 152px;
-  height: 41px;
-  left: 5px;
-  bottom: 36px;
+  background: url('./images/160x600_fr_cta.png') no-repeat center center;
+  width: 132px;
+  height: 59px;
+  left: 14px;
+  bottom: 26px;
 
   -webkit-animation: fadeInUp 0.75s ease-in-out 3s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 3s forwards;
@@ -299,32 +299,32 @@
 }
 
 .image1 {
-  background: url('./images/160x600_en_image1.jpg') no-repeat center center;
+  background: url('./images/160x600_fr_image1.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .image2 {
-  background: url('./images/160x600_en_image2.jpg') no-repeat center center;
+  background: url('./images/160x600_fr_image2.jpg') no-repeat center center;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 4.25s forwards;
   animation: fadeIn 0.75s ease-in-out 4.25s forwards;
 }
 .image3 {
-  background: url('./images/160x600_en_image3.jpg') no-repeat center center;
+  background: url('./images/160x600_fr_image3.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 6s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 6s forwards;
   animation: fadeIn 0.75s ease-in-out 6s forwards;
 }
 .image4 {
-  background: url('./images/160x600_en_image4.jpg') no-repeat center center;
+  background: url('./images/160x600_fr_image4.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 7.75s forwards;
   animation: fadeIn 0.75s ease-in-out 7.75s forwards;
 }
 .image5 {
-  background: url('./images/160x600_en_image5.jpg') no-repeat center center;
+  background: url('./images/160x600_fr_image5.jpg') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 9.5s forwards;
   animation: fadeIn 0.75s ease-in-out 9.5s forwards;
