--- a/2017/2017-05/2017-05-19/source/concept3_v1/640x480.css
+++ b/2017/2017-05/2017-05-19/source/concept3_v1/640x480.css
@@ -213,51 +213,51 @@
 @-webkit-keyframes zoomOutSteps {
   0%   {
     visibility: visible;
-    -webkit-transform: scale(1.25, 1.25);
+    -webkit-transform: translate(30px, 0);
     opacity: 0;
   }
   11%  {
     visibility: visible;
-    -webkit-transform: scale(1.25, 1.25);
+    -webkit-transform: translate(30px, 0);
     opacity: 1;
   }
   100% { 
     visibility: visible;
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: translate(0, 0);
     opacity: 1;
   }
 }
 @-moz-keyframes zoomOutSteps {
   0%   {
     visibility: visible;
-    -moz-transform: scale(1.25, 1.25);
+    -moz-transform: translate(30px, 0);
     opacity: 0;
   }
   11%  {
     visibility: visible;
-    -moz-transform: scale(1.25, 1.25);
+    -moz-transform: translate(30px, 0);
     opacity: 1;
   }
   100% { 
     visibility: visible;
-    -moz-transform: scale(1, 1);
+    -moz-transform: translate(0, 0);
     opacity: 1;
   }
 }
 @keyframes zoomOutSteps {
   0%   {
     visibility: visible;
-    transform: scale(1.25, 1.25);
+    transform: translate(30px, 0);
     opacity: 0;
   }
   11%   {
     visibility: visible;
-    transform: scale(1.25, 1.25);
+    transform: translate(30px, 0);
     opacity: 1;
   }
   100% { 
     visibility: visible;
-    transform: scale(1, 1);
+    transform: translate(0, 0);
     opacity: 1;
   }
 }
@@ -321,10 +321,7 @@
 }
 
 .image {
-  -webkit-transform-origin: 100% 20%;
-  -moz-transform-origin: 100% 20%;
-  transform-origin: 100% 20%;
-
+  width: 750px;
   background: url('./images/640x480_image.jpg') no-repeat center center;
   -webkit-animation: zoomOutSteps 6.5s ease-in-out 0.5s forwards;
   -moz-animation: zoomOutSteps 6.5s ease-in-out 0.5s forwards;
@@ -333,10 +330,10 @@
 
 .logo {
   background: url('./images/640x480_logo.png') no-repeat center center;
-  width: 37px;
-  height: 37px;
-  top: 33px;
-  left: 38px;
+  width: 42px;
+  height: 42px;
+  top: 22px;
+  left: 29px;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -345,10 +342,10 @@
 
 .text1 {
   background: url('./images/640x480_text1.png') no-repeat center center;
-  width: 378px;
-  height: 140px;
-  top: 111px;
-  left: 64px;
+  width: 278px;
+  height: 212px;
+  top: 105px;
+  left: 19px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 1.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1.5s forwards;
@@ -363,10 +360,10 @@
 
 .text2 {
   background: url('./images/640x480_text2.png') no-repeat center center;
-  width: 364px;
-  height: 139px;
-  top: 112px;
-  left: 64px;
+  width: 275px;
+  height: 175px;
+  top: 106px;
+  left: 19px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
@@ -381,10 +378,10 @@
 
 .text3 {
   background: url('./images/640x480_text3.png') no-repeat center center;
-  width: 291px;
-  height: 133px;
-  top: 111px;
-  left: 64px;
+  width: 262px;
+  height: 169px;
+  top: 108px;
+  left: 19px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 6s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 6s forwards;
@@ -395,8 +392,8 @@
   background: url('./images/640x480_cta.png') no-repeat center center;
   width: 125px;
   height: 34px;
-  top: 246px;
-  left: 82px;
+  top: 294px;
+  left: 35px;
 
   -webkit-animation: fadeInUp 0.75s ease-in-out 7s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 7s forwards;
