--- a/2017/2017-05/2017-05-19/source/concept1/320x50.css
+++ b/2017/2017-05/2017-05-19/source/concept1/320x50.css
@@ -428,7 +428,12 @@
   -moz-animation: fadeInDown 0.75s ease-in-out 6s forwards;
   animation: fadeInDown 0.75s ease-in-out 6s forwards;
 }
-
+.image2 {
+  background: url('./images/320x50_image2.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.01s ease-in-out 6.75s forwards;
+  -moz-animation: fadeIn 0.01s ease-in-out 6.75s forwards;
+  animation: fadeIn 0.01s ease-in-out 6.75s forwards;
+}
 .cta {
   background: url('./images/320x50_cta.png') no-repeat center center;
   width: 58px;
