--- a/2017/2017-06/2017-06-21/source/branded/300x600.css
+++ b/2017/2017-06/2017-06-21/source/branded/300x600.css
@@ -423,10 +423,10 @@
 
 .logo2 {
   background: url('./images/300x600_logo2.png') no-repeat center center;
-  width: 54px;
-  height: 44px;
-  top: 53px;
-  right: 43px;
+  width: 36px;
+  height: 29px;
+  right: 8px;
+  bottom: 6px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 2s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 2s forwards;
